[package]
name = "settings_path"
version = "0.1.0"
authors = ["f3kilo <f3kilo@yandex.ru>"]
edition = "2018"
repository = "https://github.com/F3kilo/settings_path.git"
description = "Simple crate to easy select path for program settings"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
